# FlappyBird

./: main.cpp  meson.build
scoreboard/: scoreboard.txt
src/core/: Bird.cpp  Bird.h  Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  Bullets.cpp  Bullets.h  DrawScore.cpp  DrawScore.h  FlappyBird.cpp  FlappyBird.h  FlappyWindow.cpp  FlappyWindow.h  Pipes.cpp  Pipes.h
